# gdp-paper

./: .gitignore  README.md  _TZ_16934-euclid.tex  _TZ_16934-euclid.xcp  defn.hs  delete.hs  delete1.hs  delete2.hs  demo.hs  ex1.hs  ex2.hs  gdp.bib  gdp.tex  idioms.hs  justified-usage.hs  justified.hs  more_lists.hs  named.hs  nzlic.hs  ordered.hs  pred.hs  st.hs  st1.hs  st2.hs  tableaux.hs  test.hs  theTC.hs  usageO.hs
gdp-demo/: LICENSE  README.md  gdp-demo.cabal
gdp-demo/src/: Arguments.hs  GdpList.hs  Implicit.hs  Lists.hs  Maps.hs  Named.hs  Nats.hs  Propositional.hs  Sized.hs  Sorted.hs  St.hs  Tableaux.hs  The.hs
gdp-demo/src/Examples/: Dot.hs  Dot2.hs  Liquid.hs  Lists.hs  Logic.hs  Sorting.hs  St.hs
gdp-demo/src/Examples/.liquid/: Liquid.hs.bak  Liquid.hs.cst.html  Liquid.hs.err  Liquid.hs.html  Liquid.hs.json  Liquid.hs.smt2  Liquid.hs.vim.annot
gdp-demo/src/Examples/Liquid/: Internal.hs
gdp-demo/src/Examples/Liquid/.liquid/: Internal.hs.bak  Internal.hs.bspec  Internal.hs.cst.html  Internal.hs.err  Internal.hs.html  Internal.hs.json  Internal.hs.smt2  Internal.hs.vim.annot
gdp-demo/src/Solver/: Tableaux.hs
